--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: html_editor_enhanced
+name: html_editor_enhanced_forked_by_ametory
 description: HTML rich text editor for Android, iOS, and Web, using the Summernote library.
   Enhanced with highly customizable widget-based controls, bug fixes, callbacks, dark mode, and more.
-version: 2.5.1
+version: 2.5.2
 homepage: https://github.com/tneotia/html-editor-enhanced
 
 environment:
@@ -44,15 +44,15 @@ dev_dependencies:
 flutter:
 
   assets:
-    - packages/html_editor_enhanced/assets/summernote.html
-    - packages/html_editor_enhanced/assets/summernote-no-plugins.html
-    - packages/html_editor_enhanced/assets/summernote-lite.min.css
-    - packages/html_editor_enhanced/assets/summernote-lite-dark.css
-    - packages/html_editor_enhanced/assets/summernote-lite.min.js
-    - packages/html_editor_enhanced/assets/jquery.min.js
-    - packages/html_editor_enhanced/assets/font/summernote.eot
-    - packages/html_editor_enhanced/assets/font/summernote.ttf
-    - packages/html_editor_enhanced/assets/plugins/summernote-at-mention/summernote-at-mention.js
+    - packages/html_editor_enhanced_forked_by_ametory/assets/summernote.html
+    - packages/html_editor_enhanced_forked_by_ametory/assets/summernote-no-plugins.html
+    - packages/html_editor_enhanced_forked_by_ametory/assets/summernote-lite.min.css
+    - packages/html_editor_enhanced_forked_by_ametory/assets/summernote-lite-dark.css
+    - packages/html_editor_enhanced_forked_by_ametory/assets/summernote-lite.min.js
+    - packages/html_editor_enhanced_forked_by_ametory/assets/jquery.min.js
+    - packages/html_editor_enhanced_forked_by_ametory/assets/font/summernote.eot
+    - packages/html_editor_enhanced_forked_by_ametory/assets/font/summernote.ttf
+    - packages/html_editor_enhanced_forked_by_ametory/assets/plugins/summernote-at-mention/summernote-at-mention.js
   # This section identifies this Flutter project as a plugin project.
   # The 'pluginClass' and Android 'package' identifiers should not ordinarily
   # be modified. They are used by the tooling to maintain consistency when
